Toy example of using Stein Thinning

--- a/code/Lotka-Volterra.ipynb
+++ b/code/Lotka-Volterra.ipynb
@@ -1127,9 +1127,9 @@
     "$$(\\nabla \\log \\mathcal{L})(x) = -\\sum_{i=1}^N \\frac{\\partial u}{\\partial x}(t_i) (\\nabla \\log \\phi_i)(u(t_i)),$$\n",
     "where the Jacobian is not transposed and there is a minus sign in front of the expression.\n",
     "\n",
-    "Assuming multivariate normal distribution for the errors,\n",
-    "$$\\phi_i(u(t_i)) \\propto \\exp\\left( -\\frac{1}{2} (y_i - u(t_i))^T C^{-1} (y_i - u(t_i)) \\right),$$\n",
-    "so\n",
+    "For a multivariate normal distribution of the errors:\n",
+    "$$\\phi_i(u(t_i)) \\propto \\exp\\left( -\\frac{1}{2} (y_i - u(t_i))^T C^{-1} (y_i - u(t_i)) \\right)$$\n",
+    "we obtain\n",
     "$$(\\nabla \\log \\phi_i)(u(t_i)) = C^{-1}(y_i - u(t_i)).$$\n",
     "\n",
     "We assume independent standard normal priors for all parameters, therefore\n",
@@ -1143,7 +1143,7 @@
    "id": "ae9496ad-851d-4fed-aca2-68cb2bd62e9c",
    "metadata": {},
    "source": [
-    "We calculate the gradient of the log-likelihood from the Jacobian obtained above and the equations:"
+    "We calculate the gradient of the log-likelihood from the Jacobian obtained previosly:"
    ]
   },
   {
@@ -1377,7 +1377,7 @@
    "id": "92d99b5c-4d52-4ea5-8aaa-8dc7ac350ea4",
    "metadata": {},
    "source": [
-    "We can save time by calculating the gradients only for unique samples:"
+    "We can save time by calculating the gradients for unique samples only:"
    ]
   },
   {
@@ -1435,9 +1435,9 @@
    "id": "c7be3f20-4bba-411d-9103-a9c8ce379c32",
    "metadata": {},
    "source": [
-    "We note that calculating gradients after a MCMC run is what is called \"embarrassingly parallelisable\" and the time required for this step can be driven down given sufficient computational resources. This is in contrast to the MCMC run itself, which is inherently sequential.\n",
+    "We note that calculating gradients after a MCMC run is what is called \"embarrassingly parallelisable\" and the time required for this step can be effectively eliminated given sufficient computational resources. This is in contrast to the MCMC run itself, which is inherently sequential.\n",
     "\n",
-    "We demonstrate using the popular package ``Dask`` to parallelise this computation across the cores of a CPU on a single machine."
+    "Here we demonstrate how the popular package ``Dask`` can be used to parallelise this computation across the cores of a CPU on a single machine."
    ]
   },
   {
@@ -1795,12 +1795,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 69,
    "id": "5997c278-2efd-4783-a2ba-2fdb2fd22046",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def apply_along_axis_parallel(func1d, axis, arr, chunk_size):\n",
+    "def apply_along_axis_parallel(func1d, axis, arr, chunk_size, client):\n",
     "    \"\"\"Apply function along the given axis and parallelise in chunks\"\"\"\n",
     "    assert axis in (0, 1)\n",
     "\n",
@@ -1836,7 +1836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 78,
    "id": "18fdd74b-a02d-478d-8fc3-e6a7bf10b482",
    "metadata": {},
    "outputs": [
@@ -1844,14 +1844,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1.49 s, sys: 135 ms, total: 1.62 s\n",
-      "Wall time: 8.9 s\n"
+      "CPU times: user 1.35 s, sys: 95.9 ms, total: 1.45 s\n",
+      "Wall time: 8.11 s\n"
      ]
     }
    ],
    "source": [
     "%%time\n",
-    "grad_parallel = apply_along_axis_parallel(grad_log_posterior, 1, unique_samples, 200)"
+    "grad_parallel = apply_along_axis_parallel(grad_log_posterior, 1, unique_samples, 200, client)"
    ]
   },
   {
@@ -1864,7 +1864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 79,
    "id": "6c6ede40-300f-4892-887f-8e5a42f182f7",
    "metadata": {},
    "outputs": [
@@ -1874,7 +1874,7 @@
        "0.0"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 79,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1882,6 +1882,35 @@
    "source": [
     "np.max(np.abs(grad_parallel - grad))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "86a4aff9-28a4-407a-b77c-860d1fbaacff",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(2349, 4)"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grad_parallel.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e65d7454-c049-4ea0-9b4f-159ab4d49c09",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
