Perform Stein Thinning on the RW and HMC samples

--- a/code/Stein_Thinning_Example.ipynb
+++ b/code/Stein_Thinning_Example.ipynb
@@ -5,7 +5,7 @@
    "id": "052ddcb5-6b50-4450-96d2-6b52f5d8d171",
    "metadata": {},
    "source": [
-    "This is a tiny example of using Stein Thinning updated from https://github.com/wilson-ye-chen/stein_thinning#installing-via-git."
+    "This is a tiny example of using Stein Thinning updated to PyStan 3 from https://github.com/wilson-ye-chen/stein_thinning#installing-via-git."
    ]
   },
   {
