--- a/code/Lotka-Volterra.ipynb
+++ b/code/Lotka-Volterra.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 379,
    "id": "4fbeb55f-4856-4967-b506-425536b3d1ff",
    "metadata": {},
    "outputs": [],
@@ -11,6 +11,7 @@
     "\n",
     "import numpy as np\n",
     "from numpy.linalg import inv\n",
+    "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "from scipy.integrate import solve_ivp\n",
@@ -295,6 +296,20 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 388,
+   "id": "f2c208d4-2c8b-4239-a9c4-0d6520e3e980",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "save_data = False\n",
+    "if save_data:\n",
+    "    filepath = Path('../data') / 'generated' / 'lotka_volterra_gaussian_noise.csv'\n",
+    "    df = pd.DataFrame({'u1': y[:, 0], 'u2': y[:, 1]}, index=pd.Index(t, name='t'))\n",
+    "    df.to_csv(filepath)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "6192da62-9310-41a8-9640-71ff5a0cab69",
    "metadata": {},
@@ -499,14 +514,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": 389,
    "id": "5362792d-25f1-4bff-a402-23d5e12830e8",
    "metadata": {},
    "outputs": [],
    "source": [
     "def plot_trace(samples, axs=None):\n",
     "    if axs is None:\n",
-    "        fig, axs = plt.subplots(1, samples.shape[1], figsize=(15, 3), constrained_layout=True)\n",
+    "        n_cols = samples.shape[1]\n",
+    "        fig, axs = plt.subplots(1, samples.shape[1], figsize=(3 * n_cols, 3), constrained_layout=True)\n",
     "    for i in range(d):\n",
     "        axs[i].plot(samples[:, i]);\n",
     "        axs[i].set_xscale('log');\n",
@@ -2860,6 +2876,9 @@
   }
  ],
  "metadata": {
+  "jupytext": {
+   "formats": "ipynb,auto:percent"
+  },
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
