--- a/code/examples/Dask_AWS.ipynb
+++ b/code/examples/Dask_AWS.ipynb
@@ -544,6 +544,14 @@
      "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/artem/Study/KCL/ST50 Project/code/.venv/lib/python3.11/site-packages/distributed/system_monitor.py:201: UserWarning: timed out waiting on channel\n",
+      "  self._gilknocker.reset_contention_metric()\n"
+     ]
     }
    ],
    "source": [
