Move to_arviz() to a new utils package

--- a/code/Lotka-Volterra.ipynb
+++ b/code/Lotka-Volterra.ipynb
@@ -2,10 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 78,
    "id": "4fbeb55f-4856-4967-b506-425536b3d1ff",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/artem/Study/KCL/ST50 Project/code/.venv/lib/python3.11/site-packages/distributed/system_monitor.py:201: UserWarning: timed out waiting on channel\n",
+      "  self._gilknocker.reset_contention_metric()\n"
+     ]
+    }
+   ],
    "source": [
     "from pathlib import Path\n",
     "\n",
@@ -31,7 +40,8 @@
     "from stein_thinning.thinning import thin\n",
     "\n",
     "from utils.parallel import map_parallel, apply_along_axis_parallel\n",
-    "from utils.plotting import plot_paths, plot_trace, plot_traces"
+    "from utils.plotting import plot_paths, plot_trace, plot_traces\n",
+    "from utils.sampling import to_arviz"
    ]
   },
   {
@@ -607,21 +617,6 @@
     "        trace[i + 1, :] = theta\n",
     "\n",
     "    return trace"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "e1d3d52c-c655-4bd1-8b6a-195971325775",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def to_arviz(chains, var_names):\n",
-    "    \"\"\"Convert output to arviz format\"\"\"\n",
-    "    assert len(chains) > 0\n",
-    "    return az.from_dict({\n",
-    "        var_name: np.stack([chain[:, i] for chain in chains]) for i, var_name in enumerate(var_names)\n",
-    "    })"
    ]
   },
   {
